objects/FD_Definition__c.object
<CustomObject>
    <fields>
        <fullName>FD_Activate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FD_Saved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FD_Updated_By__c</fullName>
        <formula>LastModifiedBy.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Updated By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FD_Updated_On__c</fullName>
        <formula>LastModifiedDate</formula>
        <label>Updated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FD_Version__c</fullName>
        <label>Version</label>
        <precision>3</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FD_WF_Name__c</fullName>
        <formula>IF(FD_Saved__c==TRUE,
FD_Workflow__r.Name + &quot; &quot; + &quot;[&quot; + TEXT(FD_Version__c) + &quot;] (Read-Only)&quot;,
FD_Workflow__r.Name + &quot; &quot; + &quot;[&quot; + TEXT(FD_Version__c) + &quot;]&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WF Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FD_Workflow__c</fullName>
        <label>Workflow</label>
        <referenceTo>FD_Workflow__c</referenceTo>
        <relationshipLabel>Definitions</relationshipLabel>
        <relationshipName>Definitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FD_WF_Name__c</columns>
        <columns>FD_Workflow__c</columns>
        <columns>FD_Version__c</columns>
        <columns>FD_Activate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>#FD{YY}SF{MM}-{0}</displayFormat>
        <label>Definition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>